crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__class_already_defined.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"class Foo; class Foo { int b; }\")"
---

