crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__strconcat-2.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"class Foo<string suffix> { string Name = PREFIX_ # suffix; } \")"
---
/main.td
symbol not found: PREFIX_
class Foo<string suffix> { string Name = PREFIX_ # suffix; } 
                                         ^^^^^^^
