crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__strconcat.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"class Foo<string prefix> { string Name = prefix # _POSTFIX; } \")"
---

