crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__syntax.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(\"clas\")"
---
/main.td
expected class, def, defm, defset, dump, multiclass, let or foreach
clas
^^^^
