crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-2.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"foreach i = \"hoge\"...3 in def foo#i;\"#)"
---
/main.td
expected integer or bitrange
foreach i = "hoge"...3 in def foo#i;
            ^^^^^^
