crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-3.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"foreach i = 1...\"fuga\" in def foo#i;\"#)"
---
/main.td
expected integer value as end of range
foreach i = 1..."fuga" in def foo#i;
                ^^^^^^
