crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-4.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"foreach i = \"hoge\"...\"fuga\" in def foo#i;\"#)"
---
/main.td
expected integer or bitrange
foreach i = "hoge"..."fuga" in def foo#i;
            ^^^^^^
