crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-5.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"class Foo<int i>; foreach i = [1, 2] in def : Foo<i>;\"#)"
---

