crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-6.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"foreach i = \"hoge\" in def foo#i;\"#)"
---
/main.td
expected list type, got 'string'
foreach i = "hoge" in def foo#i;
            ^^^^^^
