crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init-7.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"class Foo<string s>; foreach s = [\"a\", \"b\"] in def : Foo<s>;\"#)"
---

