crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__typeof_foreach_init.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "check(r#\"class Foo<int i>; foreach i = 1...3 in def : Foo<i>;\"#)"
---

