crates/ide/src/handlers/snapshots/ide__handlers__diagnostics__tests__update_diag.snap
---
source: crates/ide/src/handlers/diagnostics.rs
expression: "format!(\"before:\\n{before}\\nafter:\\n{after}\")"
---
before:
/main.td
expected ';' or '{' to start body
class Foo
         ^


after:
